// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders non-undefined values as options 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-2-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-2-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-2"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-2-label"
    className="hig__dropdown-v1__menu"
    id="downshift-2-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        1
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        true
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-3"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
    </div>
    <div
      aria-selected={true}
      className="hig__dropdown-option hig__dropdown-option--selected"
      id="downshift-2-item-4"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"checkmark-blue-dark-24\\"><polygon fill=\\"#087AAD\\" points=\\"10.1802137 16 6 12.1129 7.29586623 10.8214 10.1569902 13.4647 16.6790525 7 18 8.2681\\" fill-rule=\\"evenodd\\"/></svg>",
            }
          }
        />
      </div>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-5"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-6"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        [object Object]
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-2-item-7"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        [object Map]
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with a controlled value 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-10-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-10-label"
              autoComplete="off"
              className="hig__text-field-v1__input"
              disabled={undefined}
              id="downshift-10"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value="foo"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-10-label"
    className="hig__dropdown-v1__menu"
    id="downshift-10-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-10-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-10-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="hig__dropdown-option hig__dropdown-option--selected"
      id="downshift-10-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"checkmark-blue-dark-24\\"><polygon fill=\\"#087AAD\\" points=\\"10.1802137 16 6 12.1129 7.29586623 10.8214 10.1569902 13.4647 16.6790525 7 18 8.2681\\" fill-rule=\\"evenodd\\"/></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with a label and an ID 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="whoaBuddy-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <span
            className="hig__text-field-v1__label-spacer"
          />
          <label
            className="hig__text-field-v1__label"
            htmlFor="whoaBuddy"
          >
            HIG Themes
          </label>
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="whoaBuddy-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="whoaBuddy"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="whoaBuddy-label"
    className="hig__dropdown-v1__menu"
    id="whoaBuddy-menu"
    role="listbox"
  />
</div>
`;

exports[`Dropdown renders with custom option formatting 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-1-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-1-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-1"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-1-label"
    className="hig__dropdown-v1__menu"
    id="downshift-1-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-1-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-1-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Baz
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-1-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        Foo
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with custom option render function 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-3-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-3-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-3"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-3-label"
    className="hig__dropdown-v1__menu"
    id="downshift-3-menu"
    role="listbox"
  >
    <div>
      RENDERS
    </div>
    <div>
      WITH
    </div>
    <div>
      CUSTOM
    </div>
    <div>
      OPTION
    </div>
    <div>
      RENDER
    </div>
    <div>
      FUNCTION
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with default value 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-7-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-7-label"
              autoComplete="off"
              className="hig__text-field-v1__input"
              disabled={undefined}
              id="downshift-7"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value="foo"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-7-label"
    className="hig__dropdown-v1__menu"
    id="downshift-7-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-7-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-7-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="hig__dropdown-option hig__dropdown-option--selected"
      id="downshift-7-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"checkmark-blue-dark-24\\"><polygon fill=\\"#087AAD\\" points=\\"10.1802137 16 6 12.1129 7.29586623 10.8214 10.1569902 13.4647 16.6790525 7 18 8.2681\\" fill-rule=\\"evenodd\\"/></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-9-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-9-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-9"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-9-label"
    className="hig__dropdown-v1__menu"
    id="downshift-9-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-9-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-9-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-9-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with multiple selection and a controlled value 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-11-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-11-label"
              autoComplete="off"
              className="hig__text-field-v1__input"
              disabled={undefined}
              id="downshift-11"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value="foo, bar"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-11-label"
    className="hig__dropdown-v1__menu"
    id="downshift-11-menu"
    role="listbox"
  >
    <div
      aria-selected={true}
      className="hig__dropdown-option hig__dropdown-option--selected"
      id="downshift-11-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"checkmark-blue-dark-24\\"><polygon fill=\\"#087AAD\\" points=\\"10.1802137 16 6 12.1129 7.29586623 10.8214 10.1569902 13.4647 16.6790525 7 18 8.2681\\" fill-rule=\\"evenodd\\"/></svg>",
            }
          }
        />
      </div>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-11-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={true}
      className="hig__dropdown-option hig__dropdown-option--selected"
      id="downshift-11-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
      <div
        className="hig__dropdown-option__checkmark"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"checkmark-blue-dark-24\\"><polygon fill=\\"#087AAD\\" points=\\"10.1802137 16 6 12.1129 7.29586623 10.8214 10.1569902 13.4647 16.6790525 7 18 8.2681\\" fill-rule=\\"evenodd\\"/></svg>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific and general option render function 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-5-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-5-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-5"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-5-label"
    className="hig__dropdown-v1__menu"
    id="downshift-5-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific render function 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-4-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-4-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-4"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-4-label"
    className="hig__dropdown-v1__menu"
    id="downshift-4-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#00ff00",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Green
      </p>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#0000ff",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Blue
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with option specific, general and format rendering 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-6-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-6-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-6"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-6-label"
    className="hig__dropdown-v1__menu"
    id="downshift-6-menu"
    role="listbox"
  >
    <div
      style={
        Object {
          "backgroundColor": "white",
          "padding": "2px 4px",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "#ff0000",
            "height": "24px",
            "width": "32px",
          }
        }
      />
      <p>
        Red
      </p>
    </div>
    <div>
      GREEN
    </div>
    <div>
      BLUE
    </div>
  </div>
</div>
`;

exports[`Dropdown renders with text entry 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-8-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-8-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-8"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-8-label"
    className="hig__dropdown-v1__menu"
    id="downshift-8-menu"
    role="listbox"
  >
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-8-item-0"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        bar
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-8-item-1"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        baz
      </span>
    </div>
    <div
      aria-selected={false}
      className="hig__dropdown-option"
      id="downshift-8-item-2"
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      role="option"
      tabIndex="0"
    >
      <span
        className="hig__dropdown-option__label"
      >
        foo
      </span>
    </div>
  </div>
</div>
`;

exports[`Dropdown renders without props 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  aria-owns={null}
  className="hig__dropdown"
  role="combobox"
>
  <div
    className="hig__dropdown__input-wrapper"
  >
    <div
      className="hig__text-field-v1 hig__text-field-v1--button"
    >
      <div
        className="hig__text-field-v1__content"
      >
        <div
          className="hig__text-field-v1__input-wrapper"
        >
          <div
            className="hig__text-field-v1__input-row"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-labelledby="downshift-0-label"
              autoComplete="off"
              className="hig__text-field-v1__input hig__text-field-v1__input--no-value"
              disabled={undefined}
              id="downshift-0"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder={undefined}
              readOnly={true}
              type="button"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <span
      className="hig__dropdown__input-caret"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"10\\" height=\\"6\\" viewBox=\\"0 0 10 6\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"caret-24\\"><polyline transform=\\"rotate(45 9.828 3)\\" points=\\"8 2 8 8 2 8\\" stroke=\\"#2E4258\\" stroke-width=\\"1.15\\" fill=\\"none\\" fill-rule=\\"evenodd\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/></svg>",
          }
        }
      />
    </span>
  </div>
  <div
    aria-labelledby="downshift-0-label"
    className="hig__dropdown-v1__menu"
    id="downshift-0-menu"
    role="listbox"
  />
</div>
`;
